Fixes #5 - Use combination of bootstrap hidden and show classes to display the appropriate content for our team, either left-aligned and wrapped text or right-aligned text with 2 columns. Also include a smaller image for mobile.

--- a/style.css
+++ b/style.css
@@ -304,8 +304,8 @@
     height:300px;
   }
   #section3 {
-    padding-top:100px;
-    height:550px;
+    padding-top:50px;
+    height:450px;
   }
   #section5 {
     padding-top:50px;
@@ -333,7 +333,7 @@
   }
   #section3 {
     padding-top:60px;
-    height:600px;
+    height:500px;
   } /* TODO: This section requires extra padding- work out why and fix properly */
   #section5 {
     height:150px;
